# Capstone_design_team3

./: .gitignore  README.md
Core/Inc/: AS5048A.h  DRV8353_setting.h  stm32g4xx_it.h
Core/Src/: AS5048A.c  oldfunction.c  stm32f4xx_hal_msp.c  stm32f4xx_it.c
STM32_codesave/capstone_aimming/Core/Inc/: DRV8323_setting.h  main.h
STM32_codesave/capstone_aimming/Core/Src/: DRV8323_setting.c  DRV8353_setting.c  commonPLL_testing.txt  main.c  stm32g4xx_hal_msp.c  stm32g4xx_it.c
STM32_codesave/capstone_communicator/Core/Src/: main.c
custom_msgs/: CMakeLists.txt  package.xml
custom_msgs/msg/: ControlMsg.msg  JointMsg.msg  TestDebug.msg  VisionMsg.msg
src/: CMakeLists.txt  package.xml
src/config/: params.yaml
src/include/bridge/: serial.hpp
src/include/controller/: controller.hpp  fsm.hpp
src/include/data/config/: control_config.hpp  estimator_config.hpp  port_config.hpp
src/include/data/state/: control_state.hpp  fsm_state.hpp  robot_state.hpp
src/include/estimator/: estimator.hpp  kalman_filter.hpp  kalman_filter_angle.hpp
src/include/ros/: bridge_node.hpp  ctrl_node.hpp  test_node.hpp
src/include/utils/: eigen_utils.hpp  lpf.hpp
src/launch/: ctrl_launch.py  test_launch.py  vision_test_launch.py
src/scripts/: test_kalman_evo.py  test_visualizer.py  vision.py  vision_test.py
src/scripts/prediction/: README.md  __init__.py  dataset.py  evaluate.py  generate_synthetic_data.py  model.py  predictor.py  sample_training_data.py  train.py
src/scripts/prediction/checkpoints/: synthetic0.pt  target_predictor.pt  tcn_target_predictor.pt  tcn_target_predictor0.pt
src/scripts/prediction/gru/: __init__.py  evaluate.py  model.py  predictor.py  train.py
src/scripts/prediction/results/: test_predictions.csv
src/scripts/prediction/tcn/: __init__.py  evaluate.py  model.py  predictor.py  train.py
src/src/: bridge.cpp  ctrl.cpp  test.cpp
src/src/bridge/: serial.cpp
src/src/controller/: controller.cpp  controller_angle.cpp  controller_pixel.cpp  fsm.cpp
src/src/data/config/: control_config copy.cpp  control_config.cpp  estimator_config.cpp  port_config.cpp
src/src/estimator/: estimator.cpp  kalman_filter.cpp  kalman_filter_angle.cpp  kalman_filter_pixel.cpp
src/src/ros/: bridge_node.cpp  ctrl_node.cpp  test_node.cpp
yolo_models/robot_yolo_p4_416_combine/: args.yaml  results.csv
yolo_models/robot_yolo_p4_416_combine/weights/: best.engine  best.onnx  best.pt  last.pt
yolo_models/robot_yolo_p4_416_combine/weights/best_ncnn_model/: metadata.yaml  model.ncnn.param  model_ncnn.py
